Fix layout shift in profile image

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -41,6 +41,7 @@
     }
 
     &__image {
+      width: 2rem;
       height: 2rem;
       border-radius: 50%;
       border: 2px solid var(--color__text--white);
